--- a/Gravasync/build.gradle
+++ b/Gravasync/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.5.+'
+        classpath 'com.android.tools.build:gradle:0.6.+'
     }
 }
 apply plugin: 'android'
@@ -17,14 +17,12 @@ android {
     buildToolsVersion "17.0.0"
 
     defaultConfig {
-        minSdkVersion 7
+        minSdkVersion 9
         targetSdkVersion 18
     }
 }
 
 dependencies {
-
-	// You must install or update the Support Repository through the SDK manager to use this dependency.
-	// The Support Repository (separate from the corresponding library) can be found in the Extras category.
-	// compile 'com.android.support:appcompat-v7:18.0.0'
+	compile 'com.android.support:appcompat-v7:18.0.0'
+	compile 'com.android.support:support-v4:18.0.0'
 }
