--- a/Gravasync/src/main/AndroidManifest.xml
+++ b/Gravasync/src/main/AndroidManifest.xml
@@ -27,6 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="nz.geek.megan.gravasync.GravasyncService"
+            android:exported="false" />
+
+        <activity
+            android:name="nz.geek.megan.gravasync.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
